updated end-points and solving mapping related errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 #spring.session.store-type=none
 #spring.jpa.open-in-view=true
+server.port=9090
