mapped the customer, account and transaction tables
mapping of all model classes is complete.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
-#spring.session.store-type=none
-#spring.jpa.open-in-view=true
-server.port=9090
+spring.session.store-type=none
+spring.jpa.open-in-view=true
+
+#spring.security.user.name=user  
+#spring.security.user.password=password  
+
+
