created seprate views for each classes and added post and get view in all model classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.session.store-type=none
 spring.jpa.open-in-view=true
-
+server.port=9999
 #spring.security.user.name=user  
 #spring.security.user.password=password  
 
