--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
-spring.datasource.password=chandan
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.session.store-type=none
 spring.jpa.open-in-view=true
-server.port=9999
+#server.port=9999
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
 #spring.security.user.name=user  
 #spring.security.user.password=password  
 
